--- a/AppEducation/AppEducation/Views/Account/Profile.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Profile.cshtml
@@ -81,8 +81,7 @@
                                                     <span>Ngày sinh</span>
                                                 </div>
                                                 <div class="col-md-9">
-                                                    @*<span class="oldInput">@Model.Birthday</span>*@
-                                                    <input type="date" class="newInput form-control" asp-for="Birthday" value="@Model.Birthday" disabled>
+                                                    <input class="newInput form-control" asp-for="Birthday" value="@Model.Birthday" disabled>
                                                 </div>
                                             </div>
                                             <div class="col-md-12 border-top">
@@ -104,7 +103,8 @@
                                                 <div class="col-md-3"><span>Mật Khẩu</span></div>
                                                 <div class="col-md-9">
                                                     @*<span class="text-capitalize oldInput">@Model.Job</span>*@
-                                                    <input asp-for="Password" type="password" value="@Model.Password" disabled />
+                                                    <input class="newInput" asp-for="Password" type="password" value="@Model.Password" disabled />
+                                                    <a id="seePW" class="button">Hiển thị</a>
                                                 </div>
                                             </div>
                                         </div>
