--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -40,6 +40,7 @@
                                         <img src="~/pages/create/img/icon.jpeg">
                                     </div>
                                     <p class="detail">Chủ đề : @classes.Topic</p>
+                                    <p class="giaovien">Giao Vien : @classes.User.UserName</p>
                                     <div class="cart">
                                         <a asp-action="Join" asp-controller="JoinClass" data-toggle="modal" data-target="#modalForm">vào lớp</a>
                                     </div>
