--- a/AppEducation/AppEducation/Views/Admin/UserManager.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/UserManager.cshtml
@@ -58,8 +58,12 @@
                                 <td data-label="Email" style="text-align: left;">@user.Email</td>
                                 <td data-label="Modify">
                                     @Html.ActionLink("Edit", "Edit", "Admin", new { id = user.Id }) |
-                                    @Html.ActionLink("Details", "Details", "Admin", new { id = user.Id }) |
-                                    @Html.ActionLink("Delete", "Admin", "Admin", new { id = user.Id }) |
+                                    @Html.ActionLink("Details", "Details", "Admin", new { id = user.Id }) 
+                                    <form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                                        <button type="submit" class="btn btn-sm btn-danger">
+                                            Delete
+                                        </button>
+                                    </form>
                                 </td>
                             </tr>
                             i++;
