--- a/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Present.cshtml
@@ -263,7 +263,7 @@
                                             </div>
                                         </div>
                                         <div class="text-center">
-                                            <a href="" class="btn btn-default btn-rounded mb-4" data-toggle="modal" data-target="#modalSubscriptionForm">Chọn gửi tệp tin</a>
+                                            <a id="a_sf" class="btn btn-default btn-rounded mb-4" data-toggle="modal" data-target="#modalSubscriptionForm">Chọn gửi tệp tin</a>
                                         </div>
                                         <a id="download"></a>
                                         <textarea class="text-area" spellcheck="false" id="usermsg" data-i18n="[placeholder]chat.messagebox" placeholder="Nhập tin nhắn"></textarea>
