--- a/AppEducation/AppEducation/Views/Admin/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/Index.cshtml
@@ -28,17 +28,17 @@
         <div class="col-xl-3 col-md-6">
             <div class="card bg-warning text-white mb-4">
                 <div class="card-body">Lịch Sử</div>
-                <div class="card-body"></div>
+                <div class="card-body">Lớp</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">Chi Tiết</a>
+                    <a class="small text-white stretched-link" asp-action="ClassManager" asp-controller="Admin">Chi Tiết</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                 </div>
             </div>
         </div>
         <div class="col-xl-3 col-md-6">
             <div class="card bg-success text-white mb-4">
-                <div class="card-body">Lớp Online</div>
-                <div class="card-body"></div>
+                <div class="card-body">Lớp </div>
+                <div class="card-body">Online</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <a class="small text-white stretched-link" asp-action="ShowClassOnline" asp-controller="Admin">Chi Tiết</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
