--- a/AppEducation/AppEducation/Views/Admin/ShowClassOnline.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/ShowClassOnline.cshtml
@@ -4,27 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 @model IEnumerable<ClassInfo>
-<div class="card mb-4">
-    <div class="card-header">
-        <div class="row">
-            <div class="col-md-6 col-xs-12">
-                <a class="btn btn-success" asp-action="Create" asp-controller="Admin">Tạo mới</a>
-            </div>
-            <div class="col-md-6 col-xs-12">
-                <form asp-action="Index" method="get">
-                    <div class="row">
-                        <div class="col-md-9">
-                            <input type="text" value="@ViewBag.Keyword" name="keyword" class="form-control" />
-                        </div>
-                        <div class="cold-md-3">
-                            <button type="submit" class="btn btn-primary">Tìm</button>
-                            <button type="button" onclick="window.location.href='/User/Index'" class="btn btn-dark">Reset</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+<div class="card mb-4">    
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -59,8 +39,17 @@
                             i++;
                         }
                     }
-                </tbody>               
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th>Order Number</th>
+                        <th>Topic</th>
+                        <th>ClassName</th>
+                        <th>TeacherId</th>
+                    </tr>
+                </tfoot>
             </table>
         </div>
     </div>
 </div>
+
