--- a/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
+++ b/AppEducation/AppEducation/Views/Shared/_LayoutAdmin.cshtml
@@ -29,7 +29,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">                  
-                    <a class="dropdown-item" href="login.html">Logout</a>
+                    <a class="dropdown-item" asp-controller="Home" asp-action="Index">Logout</a>
                 </div>
             </li>
         </ul>
@@ -39,17 +39,17 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" asp-controller="Admin" asp-action="Index">
                             <div class="sb-nav-link-icon"></div>
                             Người Dùng
                         </a>                      
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" asp-controller="Admin" asp-action="ShowClassOnline">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Lớp Học
                         </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" asp-action="ClassManager" asp-controller="Admin">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                            Học Viên
+                            Lịch Sử
                         </a>
                     </div>
                 </div>
