--- a/AppEducation/AppEducation/Views/Admin/SaveProfile.cshtml
+++ b/AppEducation/AppEducation/Views/Admin/SaveProfile.cshtml
@@ -18,9 +18,18 @@
 
         <div class="card-body">
             <div class="col-md-4">
-                <form asp-action="Edit">
+                <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+                    <div class="form-group" style="display : none;">
+                        <label asp-for="UserProfileId" class="control-label" disabled></label>
+                        <input asp-for="UserProfileId" class="form-control" value="@Model.UserProfileId" />
+                        <span asp-validation-for="UserProfileId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group" style="display : none;">
+                        <label asp-for="UserId" class="control-label" disabled></label>
+                        <input asp-for="UserId" class="form-control" value="@Model.UserId" />
+                        <span asp-validation-for="UserId" class="text-danger"></span>
+                    </div>
                     <div class="form-group">
                         <label asp-for="FullName" class="control-label"></label>
                         <input asp-for="FullName" class="form-control" />
@@ -56,8 +65,9 @@
                         <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
+
                     <div class="form-group">
-                        <input type="submit" value="Lưu lại"  asp-controller="Admin" asp-action="SaveProfile" class="btn btn-primary" />
+                        <input type="submit" value="Lưu lại" asp-controller="Admin" asp-action="SaveProfilePost" class="btn btn-primary" />
                     </div>
                 </form>
             </div>
