thêm model thông báo, Đăng nhập google , Thay đổi ngôn ngữ

--- a/AppEducation/AppEducation/Views/RoleAdmin/Create.cshtml
+++ b/AppEducation/AppEducation/Views/RoleAdmin/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="bg-primary m-1 p-1"><h4>Create Role</h4></div>
-<div asp-validation-summary="All" class="text-danger"></div>
+<div asp-validation-summary="All" class="text-danger">
 <form asp-action="Create" method="post">
     <div class="form-group">
         <label for="name"></label>
