--- a/AppEducation/AppEducation/Views/Account/Login.cshtml
+++ b/AppEducation/AppEducation/Views/Account/Login.cshtml
@@ -6,6 +6,7 @@
 
 @section Head {
 	<link rel="stylesheet" type="text/css" href="~/pages/login/dangnhap.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 }
 <div class="wrapper">
 	<div class="logo">
@@ -15,7 +16,7 @@
 		<p>Sign In</p>
 	</div>
 	<div asp-validation-summary="All" class="text-danger"></div>
-	<form asp-area="" asp-controller="Account" asp-action="Login" asp-antiforgery="true"  >
+	<form asp-area="" asp-controller="Account" asp-action="Login" asp-antiforgery="true">
 		<div class="form">
 			<div class="input_field">
 				<label>User Name</label>
@@ -24,7 +25,7 @@
 			<div class="input_field">
 				<label>Password</label>
 				<input asp-for="Password" type="password" class="input">
-				<a href="#" class="forgot">Forgot password?</a>
+				@Html.ActionLink("Forgot password", "ForgotPassword", "Account")
 			</div>
 			<div class="btn">
 				<input type="submit" value="Sign in" class="sign_btn">
@@ -32,7 +33,13 @@
 		</div>
 	</form>
 	<div class="create_act">
-		<p>New to Account? <a href="#">Create an account.</a></p>
+		<p>Have no account? @Html.ActionLink("Create an account","Register", "Account")</p>
+	</div>
+	<div>
+		<a asp-action="GoogleLogin" class="google btn">
+			<i class="fa fa-google fa-fw">
+			</i> Login with Google+
+		</a>
 	</div>
 	<div class="footer">
 		<ul>
