--- a/AppEducation/AppEducation/Views/Home/Index.cshtml
+++ b/AppEducation/AppEducation/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                         <h1>Đăng Kí</h1>
                         <h2>Lập Tức</h2>
                         <h3>Để Trải Nghiệm</h3>
-                        <a href="#">Đăng Kí</a>
+                        <a asp-action="Register" asp-controller="Account">Đăng Kí</a>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
     <!-- End info Area -->
     <!-- start contact Area -->		
         <section class="contact-area section-gap" id="contact">
-            <div class="container">
+            <div id="LienHe" class="container">
                 <div class="row d-flex justify-content-center">
                     <div class="menu-content pb-30 col-lg-8">
                         <div class="title text-center">
