--- a/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
+++ b/AppEducation/AppEducation/Views/JoinClass/Create.cshtml
@@ -22,7 +22,7 @@
                         <li><a href="#" data-toggle="modal" data-target="#modalSubscriptionForm"><i class="fa fa-plus-circle"></i></a></li>
                     </ul>
                 </div>
-                <h1 class="text-center">Danh Sách Lớp</h1>
+                <h1 id="DanhSachLop" class="text-center">Danh Sách Lớp</h1>
             </div>
             <hr>
                 
@@ -58,7 +58,7 @@
     <div class="modal-dialog" role="document">
             <form class="modal-content" method="POST" asp-action="Create" asp-controller="JoinClass">
                 <div class="modal-header text-center">
-                    <h4 class="modal-title w-100 font-weight-bold">Đăng Kí Lớp</h4>
+                    <h4 id="DangKyLop" class="modal-title w-100 font-weight-bold">Đăng Kí Lớp</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
